deployment/gateway/gateway.yaml
# Gateway Configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - path: /currency-conversion/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: currency-conversion
                port:
                  number: 8282

          - path: /currency-exchange/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: currency-exchange
                port:
                  number: 8181
